2013-02-01  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Added function 'api_get_pandora_servers'.
        * include/functions_servers.php: Fixed a typo.

	Merged from trunk (rev7304).

2013-01-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.php: fixed the
	default value for the period in the data item.

2013-01-21  Koichiro KIKUCHI  <koichiro@rworks.jp>

	* pandora_console.redhat.spec: Updated version strings.
	 (for 4.0.3 release).

---------------------------------
Official 4.0.3 RELEASE
---------------------------------

2013-01-18  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/sql/update_manager.sql: Updated
	to last package version.

2013-01-18  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager/lib/functions.ajax.php
	operation/events/events_rss.php: Delete debug_print calls (to log)

2013-01-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Fixed string graphs in reports.

2013-01-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_reporting.php: Fixed string graphs in reports.

2013-01-17  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_rss.php
	operation/events/export_csv.php
	operation/events/events_list.php
	operation/events/events.php: Fixed several bugs of the filter 
	of events in events viewer, csv and rss export tools

2013-01-17  Sancho Lerena <slerena@artica.es>

        * include/functions_ui.php: Fixed cache control for
        avoid send each time static contents. 0 is "always"
        instead "never" :-S

2013-01-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/languages/*.po,
	include/languages/*.mo: Updated strings for 4.0.3
	release.

2013-01-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* images/pandora_report_logo.png: uploaded image for
	report cover

2013-01-16  Dario Rodriguez <dario.rodriguez@artica.es>
